Mise à jour de marges et wrap du piv header

--- a/src/sdg/components/PivHeader/Test/pivHeaderBaselineTest.html
+++ b/src/sdg/components/PivHeader/Test/pivHeaderBaselineTest.html
@@ -41,3 +41,13 @@
         </form>
     </qc-piv-header>
 </div>
+
+<br>
+
+<qc-piv-header
+        id="piv-header-mce"
+        alt-logo="Accédez à Québec.ca"
+        join-us-url="#join-us"
+        alt-language-url="#fakeEnglish"
+>
+</qc-piv-header>
