--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1404,10 +1404,6 @@ qc-notice[type=error] ul li a:hover, qc-notice[type=error] ul li a:focus {
   text-decoration: none;
 }
 
-.go-to-content a:focus, .qc-piv-header .piv-top .right-section a:focus, .qc-piv-header .piv-top .signature-group a:focus, qc-piv-header [slot=links] a:focus {
-  outline: #ffffff solid 2px;
-}
-
 .qc-piv-header .piv-top .right-section .links ul, qc-piv-header [slot=links], qc-piv-header [slot=links] ul {
   list-style: none;
   padding: 0;
@@ -1441,6 +1437,8 @@ qc-piv-header {
 }
 .qc-piv-header .piv-top {
   display: flex;
+  flex-wrap: nowrap;
+  gap: var(--qc-spacer-sm);
   align-items: start;
   min-width: 7.2rem;
 }
@@ -1461,22 +1459,23 @@ qc-piv-header {
 }
 .qc-piv-header .piv-top .signature-group .logo a {
   display: flex;
-  flex-grow: 1;
-  height: 4rem;
-  margin-right: 6.4rem;
+  flex-shrink: 1;
+  height: fit-content;
+  width: fit-content;
+  margin-right: auto;
   outline-offset: 0.4rem;
+  object-fit: contain;
 }
-.qc-piv-header .piv-top .signature-group .logo a [role=img] {
-  background-image: var(--logo-src);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
+.qc-piv-header .piv-top .signature-group .logo a img {
+  display: flex;
+  flex-basis: min-content;
   min-width: 150px;
-  object-fit: fill;
   width: 100%;
   height: 100%;
   max-width: 20rem;
   min-height: 4rem;
+  max-height: 7.2rem;
+  margin-right: 0;
 }
 .qc-piv-header .piv-top .title {
   display: block;
@@ -1531,7 +1530,7 @@ qc-piv-header {
 
 qc-piv-header a,
 .qc-piv-header a {
-  --qc-color-link-focus-outline: var(--qc-color-blue-pale);
+  --qc-color-link-focus-outline: #dae6f0;
   --qc-color-link-hover: white;
   --qc-color-link-text: white;
   --qc-color-link-visited: white;
@@ -1585,7 +1584,6 @@ qc-piv-header a:focus-visible:has(img), qc-piv-header a:focus:has(img),
   }
   .qc-piv-header .piv-top .logo img {
     width: 100%;
-    margin-right: 1.6rem;
   }
   .qc-piv-header .piv-top .title {
     display: none;
