--- a/src/sdg/components/DropdownList/DropdownListItems/DropdownListItemsMultiple/_dropdownListItemsMultiple.scss
+++ b/src/sdg/components/DropdownList/DropdownListItems/DropdownListItemsMultiple/_dropdownListItemsMultiple.scss
@@ -8,12 +8,8 @@
     padding-left: token-value(spacer, xs);
     padding-right: token-value(spacer, xs);
     flex-grow: 1;
-    align-items: center;
   }
-  .qc-choicefield {
-    margin-top: 0 !important;
-    &:focus {
-      outline: none;
-    }
+  .qc-choicefield:focus {
+    outline: none;
   }
 }
