--- a/src/sdg/components/DropdownList/DropdownListItems/_dropdownListItems.scss
+++ b/src/sdg/components/DropdownList/DropdownListItems/_dropdownListItems.scss
@@ -38,15 +38,13 @@ $min-height: 40;
 
   * {
     overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
   }
 }
 
 .qc-dropdown-list-multiple, .qc-dropdown-list-single {
   display: flex;
   align-items: center;
-  height: rem($min-height);
+  min-height: rem($min-height);
 
   &.qc-dropdown-list-active:hover {
     background-color: token-value(color, grey, pale);
