--- a/src/sdg/components/DropdownList/Test/dropdownListBaselineTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListBaselineTest.html
@@ -147,6 +147,15 @@
     </select>
   </qc-select>
 
+<qc-select id="qc-select-multiple-choices-sm" width="sm">
+    <label for="select-multiple-choices-sm">Choix unique</label>
+    <select id="select-multiple-choices-sm" multiple>
+        <option value="1" selected>Option 1 + texte de remplissage</option>
+        <option value="2">Option 2 + texte de remplissage</option>
+        <option value="3">Option 3 + texte de remplissage</option>
+    </select>
+</qc-select>
+
   <qc-select
           id="dropdown-list-regions"
           placeholder="Sélectionner une région"
