--- a/src/sdg/components/DropdownList/DropdownListItems/DropdownListItemsSingle/_dropdownListItemsSingle.scss
+++ b/src/sdg/components/DropdownList/DropdownListItems/DropdownListItemsSingle/_dropdownListItemsSingle.scss
@@ -1,8 +1,7 @@
 @use "../../../../scss/qc-sdg-lib" as *;
 
 .qc-dropdown-list-single {
-  padding-left: token-value(spacer, xs);
-  padding-right: token-value(spacer, xs);
+  padding: token-value(spacer, xs);
   margin: 0;
 }
 
