--- a/src/sdg/components/Fieldset/_fieldset.scss
+++ b/src/sdg/components/Fieldset/_fieldset.scss
@@ -103,4 +103,7 @@ $invalid-border-width: 2px;
     margin-top: token-value(spacer, xs);
     margin-bottom: 0;
   }
+
+  --qc-select-margin-bottom: 0;
+
 }
