--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2072,6 +2072,7 @@ input[type=radio].qc-choicefield:checked.qc-compact::before {
   flex-wrap: wrap;
   margin-bottom: 3.2rem;
   margin-top: -0.8rem;
+  --qc-select-margin-bottom: 0;
 }
 .qc-formfield-row > .qc-form-error {
   width: 100%;
@@ -2523,7 +2524,7 @@ li[aria-selected=true] {
 }
 
 .qc-dropdown-list-margin {
-  margin-bottom: 3.2rem;
+  margin-bottom: var(--qc-select-margin-bottom, 3.2rem);
 }
 
 .qc-dropdown-list-root {
