--- a/src/sdg/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/components/DropdownList/_dropdownList.scss
@@ -6,8 +6,9 @@
 $min-height: 40;
 $border: 1;
 
-.qc-dropdown-list-margin {
-  margin-bottom: var(--qc-select-margin-bottom, rem(32));
+.qc-select {
+  display: block;
+  margin-bottom: rem(32);
 }
 
 .qc-dropdown-list-root {
