Ajout de rôle heading pour le titre de piv en span

--- a/src/sdg/components/PivHeader/Test/pivHeaderBaselineTest.html
+++ b/src/sdg/components/PivHeader/Test/pivHeaderBaselineTest.html
@@ -23,6 +23,7 @@
 
 <div id="pivEnteteExempleRecherchePersonnalisee">
     <qc-piv-header title-text="Titre du site ou du service"
+                   title-url=""
                    alt-logo="Accédez à Québec.ca"
                    enable-search="true"
                    show-search="true">
