--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1435,28 +1435,44 @@ qc-piv-header {
 }
 .qc-piv-header .piv-top {
   display: flex;
+  flex-wrap: nowrap;
+  gap: var(--qc-spacer-sm);
   align-items: start;
   min-width: 7.2rem;
 }
-.qc-piv-header .piv-top .logo {
+.qc-piv-header .piv-top .signature-group {
   display: flex;
-  flex-basis: 25.6rem;
-  margin-right: 0;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  align-items: start;
+  margin-right: auto;
 }
-.qc-piv-header .piv-top .logo [role=img] {
-  background-image: var(--logo-src);
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
-  margin-right: 16px;
-  min-width: 150px;
-  width: 100%;
-  max-width: 20rem;
+.qc-piv-header .piv-top .signature-group > * {
   min-height: 7.2rem;
 }
-.qc-piv-header .piv-top .title {
+.qc-piv-header .piv-top .signature-group .logo {
+  display: flex;
   align-items: center;
-  align-self: center;
+  flex-basis: 26.4rem;
+}
+.qc-piv-header .piv-top .signature-group .logo a {
+  display: flex;
+  height: fit-content;
+  width: fit-content;
+  outline-offset: 0.4rem;
+}
+.qc-piv-header .piv-top .signature-group .logo a img {
+  display: flex;
+  flex-basis: min-content;
+  min-width: 150px;
+  width: 100%;
+  height: 100%;
+  max-width: 20rem;
+  min-height: 4rem;
+}
+.qc-piv-header .piv-top .title {
+  display: block;
+  align-content: center;
 }
 .qc-piv-header .piv-top .right-section {
   min-width: fit-content;
@@ -1501,9 +1517,13 @@ qc-piv-header {
   padding-bottom: var(--qc-spacer-md);
 }
 
+.page-title {
+  display: inline-block;
+}
+
 qc-piv-header a,
 .qc-piv-header a {
-  --qc-color-link-focus-outline: var(--qc-color-blue-pale);
+  --qc-color-link-focus-outline: #dae6f0;
   --qc-color-link-hover: white;
   --qc-color-link-text: white;
   --qc-color-link-visited: white;
@@ -1555,10 +1575,6 @@ qc-piv-header a:focus-visible:has(img), qc-piv-header a:focus:has(img),
     margin-right: auto;
     min-width: 0;
   }
-  .qc-piv-header .piv-top .logo img {
-    width: 100%;
-    margin-right: 1.6rem;
-  }
   .qc-piv-header .piv-top .title {
     display: none;
   }
@@ -1578,6 +1594,12 @@ qc-piv-header a:focus-visible:has(img), qc-piv-header a:focus:has(img),
     flex-wrap: wrap;
   }
 }
+.no-link-title {
+  margin: 0;
+  font-weight: var(--qc-font-weight-regular);
+  font-size: var(--qc-font-size-md);
+}
+
 qc-piv-footer {
   margin-top: 4rem;
   padding-bottom: 4rem;
@@ -2054,9 +2076,33 @@ input[type=radio].qc-choicefield:checked.qc-compact::before {
 .qc-formfield-row qc-textfield,
 .qc-formfield-row .qc-textfield {
   margin-top: var(--qc-spacer-xs);
-  display: block;
-  width: auto;
   margin-bottom: 0;
+  min-width: 0;
+}
+.qc-formfield-row qc-textfield [size=xs] input,
+.qc-formfield-row .qc-textfield [size=xs] input {
+  width: 6.3rem;
+  max-width: 6.3rem;
+}
+.qc-formfield-row qc-textfield [size=sm] input,
+.qc-formfield-row .qc-textfield [size=sm] input {
+  width: 15.6rem;
+  max-width: 15.6rem;
+}
+.qc-formfield-row qc-textfield [size=md] input,
+.qc-formfield-row .qc-textfield [size=md] input {
+  width: 24.9rem;
+  max-width: 24.9rem;
+}
+.qc-formfield-row qc-textfield [size=lg] input,
+.qc-formfield-row .qc-textfield [size=lg] input {
+  width: 52.8rem;
+  max-width: 52.8rem;
+}
+.qc-formfield-row qc-textfield [size=xl] input,
+.qc-formfield-row .qc-textfield [size=xl] input {
+  width: 82.5rem;
+  max-width: 82.5rem;
 }
 .qc-formfield-row .qc-dropdown-list-root {
   margin-top: var(--qc-spacer-xs);
@@ -2115,6 +2161,7 @@ input[type=checkbox].qc-choicefield.qc-compact:checked::after {
 .qc-textfield label {
   font-weight: var(--qc-font-weight-content-bold);
   display: block;
+  width: fit-content;
 }
 .qc-label.qc-compact, qc-textfield label.qc-compact,
 .qc-textfield label.qc-compact {
@@ -2363,21 +2410,15 @@ qc-textfield textarea:disabled {
 }
 .qc-dropdown-list-multiple label {
   margin: 0;
-  padding-left: var(--qc-spacer-xs);
-  padding-right: var(--qc-spacer-xs);
+  padding: var(--qc-spacer-xs);
   flex-grow: 1;
-  align-items: center;
-}
-.qc-dropdown-list-multiple .qc-choicefield {
-  margin-top: 0 !important;
 }
 .qc-dropdown-list-multiple .qc-choicefield:focus {
   outline: none;
 }
 
 .qc-dropdown-list-single {
-  padding-left: var(--qc-spacer-xs);
-  padding-right: var(--qc-spacer-xs);
+  padding: var(--qc-spacer-xs);
   margin: 0;
 }
 
@@ -2415,14 +2456,12 @@ li[aria-selected=true] {
 }
 .qc-dropdown-list-items * {
   overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 .qc-dropdown-list-multiple, .qc-dropdown-list-single {
   display: flex;
   align-items: center;
-  height: 4rem;
+  min-height: 4rem;
 }
 .qc-dropdown-list-multiple.qc-dropdown-list-active:hover, .qc-dropdown-list-single.qc-dropdown-list-active:hover {
   background-color: var(--qc-color-grey-pale);
@@ -2505,7 +2544,8 @@ li[aria-selected=true] {
   align-content: center;
 }
 
-.qc-dropdown-list-margin {
+.qc-select {
+  display: block;
   margin-bottom: 3.2rem;
 }
 
