ME qc-select: ajout d'exemple d'overflow

--- a/src/sdg/components/DropdownList/_select.html
+++ b/src/sdg/components/DropdownList/_select.html
@@ -75,6 +75,15 @@
             <option value="2">Option 2</option>
         </select>
     </qc-select>
+
+    <qc-select id="qc-select-multiple-choices-sm" width="sm">
+        <label for="select-multiple-choices-sm">Débordement</label>
+        <select id="select-multiple-choices-sm" multiple>
+            <option value="1">Option 1 + texte de remplissage</option>
+            <option value="2">Option 2 + texte de remplissage</option>
+            <option value="3">Option 3 + texte de remplissage</option>
+        </select>
+    </qc-select>
 </qc-doc-exemple>
 
 <h4>Documentation technique</h4>
