--- a/src/sdg/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/components/DropdownList/_dropdownList.scss
@@ -49,6 +49,12 @@ $border: 1;
       height: rem(36);
     }
   }
+
+  &-xs { max-width: token-value(size, max-width, xs); }
+  &-sm { max-width: token-value(size, max-width, sm); }
+  &-md { max-width: token-value(size, max-width, md); }
+  &-lg { max-width: token-value(size, max-width, lg); }
+  &-xl { max-width: token-value(size, max-width, xl); }
 }
 
 .qc-dropdown-list-search {
