Ajustement d'une scss pour utiliser les tokens

--- a/src/sdg/components/Fieldset/_fieldset.scss
+++ b/src/sdg/components/Fieldset/_fieldset.scss
@@ -77,7 +77,8 @@ $invalid-border-width: 2px;
   gap: 0 rem(32);
   flex-wrap: wrap;
   margin-bottom: rem(32);
-  margin-top: rem(-8);
+  $mb : token-value(spacer, xs);
+  margin-top: calc(-1 * $mb);
 
   > .qc-form-error {
     width: 100%;
