--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2424,7 +2424,7 @@ li[aria-selected=true] {
 }
 
 .qc-dropdown-list-items {
-  max-height: var(--dropdown-items-height);
+  max-height: calc(var(--dropdown-items-height) * 0.1 * 1rem);
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -2544,22 +2544,7 @@ li[aria-selected=true] {
 .qc-select {
   display: block;
   margin-bottom: 3.2rem;
-  width: 100%;
-}
-.qc-select-xs {
-  max-width: var(--qc-size-max-width-xs);
-}
-.qc-select-sm {
-  max-width: var(--qc-size-max-width-sm);
-}
-.qc-select-md {
-  max-width: var(--qc-size-max-width-md);
-}
-.qc-select-lg {
-  max-width: var(--qc-size-max-width-lg);
-}
-.qc-select-xl {
-  max-width: var(--qc-size-max-width-xl);
+  max-width: 100%;
 }
 
 .qc-dropdown-list-container {
@@ -2568,21 +2553,6 @@ li[aria-selected=true] {
 .qc-dropdown-list-container .qc-label {
   margin-bottom: 0.4rem;
 }
-.qc-dropdown-list-container-xs {
-  max-width: var(--qc-size-max-width-xs);
-}
-.qc-dropdown-list-container-sm {
-  max-width: var(--qc-size-max-width-sm);
-}
-.qc-dropdown-list-container-md {
-  max-width: var(--qc-size-max-width-md);
-}
-.qc-dropdown-list-container-lg {
-  max-width: var(--qc-size-max-width-lg);
-}
-.qc-dropdown-list-container-xl {
-  max-width: var(--qc-size-max-width-xl);
-}
 
 .qc-dropdown-list {
   display: flex;
@@ -2590,6 +2560,8 @@ li[aria-selected=true] {
   border: 0.1rem solid var(--qc-color-grey-medium);
   min-height: 4rem;
   background-color: var(--qc-color-background);
+  max-width: 100%;
+  min-width: 0;
 }
 .qc-dropdown-list.qc-dropdown-list-invalid {
   border: 0.2rem solid var(--qc-color-red-regular) !important;
@@ -2598,19 +2570,19 @@ li[aria-selected=true] {
   height: 3.6rem;
 }
 .qc-dropdown-list-xs {
-  max-width: var(--qc-size-max-width-xs);
+  width: var(--qc-size-max-width-xs);
 }
 .qc-dropdown-list-sm {
-  max-width: var(--qc-size-max-width-sm);
+  width: var(--qc-size-max-width-sm);
 }
 .qc-dropdown-list-md {
-  max-width: var(--qc-size-max-width-md);
+  width: var(--qc-size-max-width-md);
 }
 .qc-dropdown-list-lg {
-  max-width: var(--qc-size-max-width-lg);
+  width: var(--qc-size-max-width-lg);
 }
 .qc-dropdown-list-xl {
-  max-width: var(--qc-size-max-width-xl);
+  width: var(--qc-size-max-width-xl);
 }
 
 .qc-dropdown-list-search {
