--- a/src/sdg/components/DropdownList/DropdownListItems/_dropdownListItems.scss
+++ b/src/sdg/components/DropdownList/DropdownListItems/_dropdownListItems.scss
@@ -5,7 +5,7 @@
 $min-height: 40;
 
 .qc-dropdown-list-items {
-  max-height: var(--dropdown-items-height);
+  max-height: calc(var(--dropdown-items-height) * $rem-ratio * 1rem);
   overflow-y: auto;
   overflow-x: hidden;
 
