--- a/src/sdg/components/DropdownList/Test/dropdownListBaselineTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListBaselineTest.html
@@ -77,7 +77,7 @@
 
 <div class="qc-formfield-row">
   <qc-select id="qc-select-invalid" invalid>
-    <label for="select-invalid">État invalide + texte de remplissage</label>
+    <label for="select-invalid">État initialement invalide dans .qc-formfield-row</label>
     <select multiple id="select-invalid">
       <option value="1">Option 1</option>
       <option value="2">Option 2</option>
