--- a/src/sdg/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/components/DropdownList/_dropdownList.scss
@@ -10,13 +10,7 @@ $border: 1;
   display: block;
   margin-bottom: rem(32);
 
-  width: 100%;
-
-  &-xs { max-width: token-value(size, max-width, xs); }
-  &-sm { max-width: token-value(size, max-width, sm); }
-  &-md { max-width: token-value(size, max-width, md); }
-  &-lg { max-width: token-value(size, max-width, lg); }
-  &-xl { max-width: token-value(size, max-width, xl); }
+  max-width: 100%;
 }
 
 .qc-dropdown-list-container {
@@ -25,12 +19,6 @@ $border: 1;
   .qc-label {
     margin-bottom: rem(4);
   }
-
-  &-xs { max-width: token-value(size, max-width, xs); }
-  &-sm { max-width: token-value(size, max-width, sm); }
-  &-md { max-width: token-value(size, max-width, md); }
-  &-lg { max-width: token-value(size, max-width, lg); }
-  &-xl { max-width: token-value(size, max-width, xl); }
 }
 
 .qc-dropdown-list {
@@ -39,6 +27,8 @@ $border: 1;
   border: rem($border) solid token-value(color, grey, medium);
   min-height: rem($min-height);
   background-color: token-value(color, background);
+  max-width: 100%;
+  min-width: 0;
 
   &.qc-dropdown-list-invalid {
     border: rem(2) solid token-value(color, red, regular) !important;
@@ -48,11 +38,11 @@ $border: 1;
     }
   }
 
-  &-xs { max-width: token-value(size, max-width, xs); }
-  &-sm { max-width: token-value(size, max-width, sm); }
-  &-md { max-width: token-value(size, max-width, md); }
-  &-lg { max-width: token-value(size, max-width, lg); }
-  &-xl { max-width: token-value(size, max-width, xl); }
+  &-xs { width: token-value(size, max-width, xs); }
+  &-sm { width: token-value(size, max-width, sm); }
+  &-md { width: token-value(size, max-width, md); }
+  &-lg { width: token-value(size, max-width, lg); }
+  &-xl { width: token-value(size, max-width, xl); }
 }
 
 .qc-dropdown-list-search {
