--- a/src/sdg/components/PivHeader/Test/pivHeaderBaselineTest.html
+++ b/src/sdg/components/PivHeader/Test/pivHeaderBaselineTest.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="#fakeEnglish">English</a>
             </li>
-            <li><a href="javascript:;">Nous joindre</a>
+            <li><a href="#">Nous joindre</a>
             </li>
         </ul>
     </nav>
@@ -30,7 +30,7 @@
         <ul slot="links">
             <li><a href="#fakeEnglish">English</a>
             </li>
-            <li><a href="javascript:;">Nous joindre</a>
+            <li><a href="#">Nous joindre</a>
             </li>
         </ul>
 
