--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -8,38 +8,17 @@ pre {
   padding: 0;
   white-space: pre-wrap;
   overflow: auto;
+  position: relative;
 }
 pre code, pre .qc-code {
   font-family: var(--qc-font-family-code);
 }
 pre code button, pre .qc-code button {
   float: right;
+  position: absolute;
   right: var(--qc-spacer-xs);
   top: var(--qc-spacer-xs);
-  padding: var(--qc-spacer-xs) var(--qc-spacer-sm);
-  color: white;
-  background-color: var(--qc-color-blue-piv);
-  border: 1px solid;
   white-space: nowrap;
-  transition: none !important;
-}
-pre code button .copy, pre .qc-code button .copy {
-  display: inline;
-}
-pre code button .copied, pre .qc-code button .copied {
-  display: none;
-}
-pre code button.copied, pre .qc-code button.copied {
-  background-color: transparent !important;
-  border-color: transparent !important;
-  box-shadow: none !important;
-  color: var(--qc-color-blue-piv) !important;
-}
-pre code button.copied .copy, pre .qc-code button.copied .copy {
-  display: none;
-}
-pre code button.copied .copied, pre .qc-code button.copied .copied {
-  display: inline;
 }
 
 @keyframes fadeout {
