--- a/src/doc/scss/qc-doc-sdg.scss
+++ b/src/doc/scss/qc-doc-sdg.scss
@@ -1,5 +1,6 @@
 @use "qc-sdg-lib" as *;
 @use "components/code" as *;
+@use "components/exemple" as *;
 @use "tables";
 @use "jQueryUI/jquery-ui.autocomplete";
 
