--- a/src/doc/scss/components/_exemple.scss
+++ b/src/doc/scss/components/_exemple.scss
@@ -5,9 +5,14 @@
   max-width: token-value(max-content-width);
   width: 100%;
   margin-bottom: token-value(spacer content-block mb);
+  padding-bottom: 1px;
   .exemple {
-    padding: token-value(spacer sm);
+    padding: token-value(spacer sm) token-value(spacer sm) token-value(spacer sm) token-value(spacer sm);
     @include qc-shading(0);
+
+    & > *:last-child {
+      margin-bottom: 0;
+    }
   }
 
   & > figcaption {
