Ajout de gestion de l'attribut required plaçé sur l'input de qc-textfield

--- a/src/sdg/components/TextField/Test/textFieldBaselineTest.html
+++ b/src/sdg/components/TextField/Test/textFieldBaselineTest.html
@@ -22,17 +22,20 @@
 >
     <input type="text"
            name="text-md"
+           id="text-md"
            placeholder="Long placeholder lorem ipsum dolor sit amet"
     />
 </qc-textfield>
 
 <qc-textfield name="text-lg"
-              label="Large"
               size="lg"
               placeholder="Long placeholder lorem ipsum dolor sit amet"
-              required>
+>
+    <label for="text-lg">Large</label>
     <input type="text"
            name="text-lg"
+           id="text-lg"
+           required
     />
 </qc-textfield>
 <qc-textfield
