--- a/public/css/qc-doc-sdg.css
+++ b/public/css/qc-doc-sdg.css
@@ -346,13 +346,31 @@ h1, h2, h3, h4, h5, h6 {
   border: 1px solid var(--qc-color-grey-light);
 }
 
+a.pseudo-visited {
+  color: var(--qc-color-link-visited);
+}
+a.pseudo-visited > .qc-ext-link-img {
+  background-color: var(--qc-color-link-visited);
+}
 a.pseudo-hover {
   color: var(--qc-color-link-hover);
   text-decoration: none;
 }
+a.pseudo-hover .qc-ext-link-text {
+  text-decoration: none;
+}
+a.pseudo-hover > .qc-ext-link-img {
+  background-color: var(--qc-color-link-hover);
+}
 a.pseudo-active {
   color: var(--qc-color-link-active);
   text-decoration: none;
+}
+a.pseudo-active .qc-ext-link-text {
+  text-decoration: none;
+}
+a.pseudo-active > .qc-ext-link-img {
+  background-color: var(--qc-color-link-active);
 }
 a.pseudo-focus {
   color: var(--qc-color-link-hover);
@@ -360,24 +378,33 @@ a.pseudo-focus {
   outline: 2px solid var(--qc-color-link-focus-outline);
   outline-offset: 1px;
 }
-a.pseudo-visited {
-  color: var(--qc-color-link-visited) !important;
+a.pseudo-focus .qc-ext-link-text {
+  text-decoration: none;
+}
+a.pseudo-focus > .qc-ext-link-img {
+  background-color: var(--qc-color-link-text);
 }
 a.not-visited:visited:not(:hover) {
   color: var(--qc-color-link-text);
 }
+a.not-visited:visited:not(:hover) > .qc-ext-link-text {
+  color: var(--qc-color-link-text);
+}
 
-a.pseudo-visited span.qc-ext-link-img {
+a.pseudo-visited div.qc-ext-link-img {
   background: var(--qc-color-link-visited) !important;
 }
-a.pseudo-focus span.qc-ext-link-img {
+a.pseudo-focus div.qc-ext-link-img {
   background: var(--qc-color-link-hover) !important;
 }
-a.pseudo-hover span.qc-ext-link-img {
+a.pseudo-hover div.qc-ext-link-img {
   background: var(--qc-color-link-hover) !important;
 }
-a.pseudo-active span.qc-ext-link-img {
+a.pseudo-active div.qc-ext-link-img {
   background: var(--qc-color-link-active) !important;
+}
+a.not-visited:visited:not(:hover) div.qc-ext-link-img {
+  background: var(--qc-color-link-text) !important;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
