--- a/src/sdg/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/components/DropdownList/_dropdownList.scss
@@ -58,13 +58,15 @@ $border: 1;
   width: calc(100% + 2px);
   left: -(rem($border));
   right: -(rem($border));
-  top: 100%;
+  top: calc(var(--dropdown-items-top-offset) * $rem-ratio * 1rem);
+  //top: 100%;
   z-index: 11; // Index supérieur à l'index du mixin qc-formcontrol-box
 
   background-color: token-value(color, background);
   border-left: rem($border) solid token-value(color, grey, medium);
   border-right: rem($border) solid token-value(color, grey, medium);
-  border-bottom: rem($border) solid token-value(color, grey, medium);
+  border-bottom: calc(var(--dropdown-items-bottom-border) * $rem-ratio * 1rem) solid token-value(color, grey, medium);
+  border-top: calc(var(--dropdown-items-top-border) * $rem-ratio * 1rem) solid token-value(color, grey, medium);
 }
 
 .qc-dropdown-list-hidden {
